--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-akka {
+akka {é
   loglevel = "INFO"
   http {
     server {
@@ -13,7 +13,7 @@ slick {
     properties = {
       url = "jdbc:postgresql://localhost:5432/test"
       user = "postgres"
-      password = "TKO2bout!"
+      password = "2001"
     }
     numThreads = 10
     queueSize = 1000
