--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,7 +13,7 @@ slick {
     properties = {
       url = "jdbc:postgresql://localhost:5432/test"
       user = "postgres"
-      password = "2001"
+      password = "cytech0001"
     }
     numThreads = 10
     queueSize = 1000
